# confluence2jira

./: .env.example  .gitignore  AGENT.md  AGENTS.md  README.md  build.sbt  pyproject.toml
.kiro/specs/scala-sbt-migration/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
project/: Dependencies.scala
src/confluence2jira/: __init__.py  cli.py  clients.py  config.py  models.py  transform.py
tests/: test_cli.py  test_clients.py  test_config.py  test_transform.py
