[project]
name = "confluence2jira"
version = "0.1.0"
description = "Migrate Confluence pages to Jira issues"
readme = "README.md"
authors = [
    { name = "cysbc1999", email = "cysbc1999@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "atlassian-python-api>=4.0.7",
    "beautifulsoup4>=4.15.0",
    "jira>=3.10.5",
]

[project.scripts]
confluence2jira = "confluence2jira:main"

[build-system]
requires = ["uv_build>=0.11.30,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
